charts/nodebb/latest/templates/mongodb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: mongodb
  name: mongodb
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: mongodb
    spec:
      containers:
      - image: registry.gitlab.com/wirelos/social/nodebb-db:next
        name: mongodb
        resources: {}
        volumeMounts:
        - mountPath: /data/db
          name: mongodb-data
        - mountPath: /data/configdb
          name: mongodb-config
      restartPolicy: Always
      volumes:
      - name: mongodb-data
        persistentVolumeClaim:
          claimName: mongodb-data
      - name: mongodb-config
        persistentVolumeClaim:
          claimName: mongodb-config
status: {}
