charts/nodebb/latest/templates/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
spec:
  ports:
  - name: "4567"
    port: 4567
    targetPort: 4567
  selector:
    io.kompose.service: server
status:
  loadBalancer: {}
